Finish user signup

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, 'About') %>
 <h1>About</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<p>This website is a collaboration of the CS4470 project group at Western University.
+It is designed as a method of recording and forwarding round attendance for the Schulich 
+School of Medicine and Dentistry. It also allows for doctors to see upcoming events, 
+such as rounds and grand rounds.</p>
