--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,11 @@
 <footer class="footer">
 	<nav>
-		<ul>
+		<ulr>
 			<li><%= link_to "About", about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li>
-		</ul>
+		</ulr>
+		<ull>
+			<li><%= link_to "Log Attendance", register_path %></li>
+		</ull>
 	</nav>
 </footer>
