Turning off code autocompletion

--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -10,7 +10,7 @@
 		<%= f.text_field :email %>
 
 		<%= f.label :code %>
-		<%= f.text_field :code %>
+		<%= f.text_field :code, :autocomplete => :off %>
 
 		<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
 	  <% end %>
