--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,10 +7,10 @@
 	  	<%= render 'shared/user_error_messages' %>
 
 		<%= f.label :name %>
-		<%= f.text_field :name %>
+		<%= f.text_field :name, :autocomplete => :off %>
 
 		<%= f.label :email %>
-		<%= f.text_field :email %>
+		<%= f.text_field :email, :autocomplete => :off %>
 
 		<%= f.label :password %>
 		<%= f.password_field :password %>
