--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,6 +12,7 @@
 <script src="/assets/ripples.js" type="text/javascript"></script>
 <script src="/assets/material.js" type="text/javascript"></script>
 
+<script src="/assets/moment.js" type="text/javascript"></script>
 <script src="/assets/fullcalendar.js" type="text/javascript"></script>
 <script src="/assets/bootstrapmodal.min.js" type="text/javascript"></script>
 
