--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
 
 <script src="/assets/moment.js" type="text/javascript"></script>
 <script src="/assets/fullcalendar.js" type="text/javascript"></script>
-<script src="/assets/bootstrapmodal.min.js" type="text/javascript"></script>
+<script src="/assets/bootstrapmodal.js" type="text/javascript"></script>
 
 <% if signed_in? %>
     <h1>Listing events</h1>
