--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 <link href="/assets/fullcalendar.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
-<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+<!--script src="//code.jquery.com/jquery-1.8.3.min.js"></script-->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <script src="/assets/ripples.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@
 
 <script src="/assets/moment.js" type="text/javascript"></script>
 <script src="/assets/fullcalendar.js" type="text/javascript"></script>
-<script src="/assets/bootstrapmodal.js" type="text/javascript"></script>
+<script src="/assets/bootstrapmodal.min.js" type="text/javascript"></script>
 
 <% if signed_in? %>
     <h1>Listing events</h1>
