--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Home') %>
 
-<link href="/assets/ripples.min.css" rel="stylesheet">
-<link href="/assets/material-wfont.min.css" rel="stylesheet">
+<link href="/assets/ripples.css" rel="stylesheet">
+<link href="/assets/material-wfont.css" rel="stylesheet">
 <link href="/assets/custom.css" rel="stylesheet">
 <link href="/assets/fullcalendar.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
