--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Log In') %>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-<link href="/assets/ripples.min.css" rel="stylesheet">
-<link href="/assets/material-wfont.min.css" rel="stylesheet">
+<link href="/assets/ripples.css" rel="stylesheet">
+<link href="/assets/material-wfont.css" rel="stylesheet">
 <link href="/assets/custom.css" rel="stylesheet">
 
 <script type ="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -10,9 +10,7 @@
 
 <script src="/assets/ripples.js" type="text/javascript"></script>
 <script src="/assets/material.js" type="text/javascript"></script>
-<!--THIS IS THE HEADER
-<div class="navbar navbar-material-deeppurple">
-</div>-->
+
 <div id="images">
 	<!-- Western Image -->
 	<div id="img1">
