--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,6 +34,22 @@
         </div>
     </div>
 
+    <div id="eventModal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
+                <h4 id="mTitle" class="modal-title">Create Event</h4>
+            </div>
+            <div id="mBody" class="modal-body"> Do you want to create a new event? </div>
+            <div class="modal-footer">
+              <%= link_to "Yes", new_event_path, :class => "btn btn-primary" %>
+              <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+            </div>
+        </div>
+      </div>
+    </div>
+
     <div id="calendar"></div>
     <div class="modal fade" id="modal"></div>
 <% else %>
