--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top">
+<header class="navbar">
 	<div class="navbar-inner">
 		<div class="container">
 			<%= link_to "Schulich Attendance", root_path, id: "logo" %>
