--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,19 @@
-<header class="navbar">
+<header class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
 			<%= link_to "Schulich Attendance", root_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
 					<li><%= link_to "Home", root_path %></li>
+					<li><%= link_to "Log Attendance", register_path %></li>
+
 					<% if signed_in? %>
 						<% if current_user.admin? %>
 							<li><%= link_to "Users", users_path %></li>
 						<% end %>
-						<li id="fat-menu" class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								Account <b class="caret"></b>
-							</a>
-							<ul class="dropdown-menu">
-								<li><%= link_to "Profile", current_user %></li>
-								<li><%= link_to "Edit Information", edit_user_path(current_user) %></li>
-								<li class="divider"></li>
-								<li>
-									<%= link_to "Sign Out", signout_path, method: "delete" %>
-								</li>
-							</ul>
-						</li>
-					<% else %>
-						<li><%= link_to "Log Attendance", register_path %></li>
+						<li><%= link_to "Profile", current_user %></li>
+						<li><%= link_to "Edit Information", edit_user_path(current_user) %></li>
+						<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
 					<% end %>
 				</ul>
 			</nav>
