--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,6 +18,9 @@
 			<%= f.label :password_confirmation, "Confirm Password" %>
 			<%= f.password_field :password_confirmation %>
 
+			<%= f.label :star_username, "Star Username" %>
+			<%= f.text_field :star_username %>
+
 			<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
 		<% end %>
 	</div>
