--- a/app/views/static_pages/event.html.erb
+++ b/app/views/static_pages/event.html.erb
@@ -1,17 +1,18 @@
 <% provide(:title, 'Test Event') %>
 <h1>Event Registration</h1>
 
-<div class="row">
-	<div class="span6 offset3">
-	  <%= form_for(@attendance) do |f| %>
-
+<div class="row-fluid">
+	<%= form_for(@attendance) do |f| %>
+	<div class="span12">
 		<%= f.label :email %>
 		<%= f.text_field :email %>
-
+	</div>
+	<div class="span12">
 		<%= f.label :code %>
 		<%= f.text_field :code %>
-
-		<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
-	  <% end %>
 	</div>
+	<div class="span12">
+		<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
+	</div>
+	<% end %>
 </div>
