--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,32 @@
 <header>
-	<div>
-		<div class="container">
-			<%= link_to "Schulich Attendance", root_path, id: "logo" %>
-			<nav>
-				<ul>
-					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "Log Attendance", register_path %></li>
+	<div class="navbar navbar-material-deeppurple">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collpase">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="nav-brand" href="javascript:void(0)"></a>
+		</div>
+		<div class="navbar-collapse collapse navbar-reponsive-collapse">
+				<ul class="nav navbar-nav">
+					<!--<%= link_to "Schulich Attendance", root_path, id: "logo" %> -->
+						<li>
+							<%= link_to "Home", root_path %>
+								
+						</li>
+						<li>
+							<%= link_to "Log Attendance", register_path %>
+						</li>
 
-					<% if signed_in? %>
-						<% if current_user.admin? %>
-							<li><%= link_to "Users", users_path %></li>
+						<% if signed_in? %>
+							<% if current_user.admin? %>
+								<li><%= link_to "Users", users_path %></li>
+							<% end %>
+							<li><%= link_to "Settings", edit_user_path(current_user) %></li>
+							<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
 						<% end %>
-						<li><%= link_to "Settings", edit_user_path(current_user) %></li>
-						<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
-					<% end %>
 				</ul>
-			</nav>
 		</div>
 	</div>
 </header>
