--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,7 @@
 <link href="/assets/custom.css" rel="stylesheet">
 <link href="/assets/fullcalendar.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-
-<!--script src="//code.jquery.com/jquery-1.8.3.min.js"></script-->
+<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <script src="/assets/ripples.js" type="text/javascript"></script>
