--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -8,23 +8,26 @@
 <script src="/assets/ripples.js" type="text/javascript"></script>
 <script src="/assets/material.js" type="text/javascript"></script>
 
-<h1 class="visible-lg-block">Attendance Registration</h1>
-<h2 class="visible-md-block">Attendance Registration</h2>
-<h3 class="visible-sm-block">Attendance Registration</h3>
-<h4 class="visible-xs-block">Attendance Registration</h4>
+<h1 class="visible-lg-block" align="center">Attendance Registration</h1>
+<h2 class="visible-md-block" align="center">Attendance Registration</h2>
+<h3 class="visible-sm-block" align="center">Attendance Registration</h3>
+<h4 class="visible-xs-block" align="center">Attendance Registration</h4>
 <div class="row-fluid">
 	  <%= form_for(@attendance) do |f| %>
 	  	<%= render 'shared/attendance_error_messages' %>
-	<div class="span12">
-		<%= f.label :email %>
-		<%= f.text_field :email %>
+	<div class="span12" style="padding-top: 10px;">
+		<%= f.label :email, style:";"%>
+		<%= f.text_field :email, class: "form-control floating-label" %>
 	</div>
-	<div class="span12">
-		<%= f.label :code %>
-		<%= f.text_field :code, :autocomplete => :off %>
+	<div class="span12" style="padding-top: 10px;">
+		<%= f.label :code, style:";" %>
+		<%= f.text_field :code, :autocomplete => :off, class: "form-control floating-label"%>
 	</div>
-	<div class="span12">
-		<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
+	<div class="span12" align="center" style="padding-top: 10px;">
+		<%= f.submit "Log Attendance", class: "btn btn-large btn-material-lightgreen visible-lg-block" %>
+		<%= f.submit "Log Attendance", class: "btn btn-md btn-material-lightgreen visible-md-block" %>
+		<%= f.submit "Log Attendance", class: "btn btn-sm btn-material-lightgreen visible-sm-block" %>
+		<%= f.submit "Log Attendance", class: "btn btn-xs btn-material-lightgreen visible-xs-block" %>
 	</div>
 	<% end %>
 </div>
