--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
+<script src="/assets/jquery.js" type="text/javascript"></script>
 <header>
 	<div class="navbar navbar-material-deeppurple">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collpase">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-reponsive-collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -13,7 +14,6 @@
 					<!--<%= link_to "Schulich Attendance", root_path, id: "logo" %> -->
 						<li>
 							<%= link_to "Home", root_path %>
-								
 						</li>
 						<li>
 							<%= link_to "Log Attendance", register_path %>
