Added mobile views and fixed the sign in and sign up page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
   <link rel="icon" href="https://www.uwo.ca/web_standards/img/logo/crest-stack-3.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
   <%= render 'layouts/header' %>
