--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@
 <script src="/assets/bootstrapmodal.min.js" type="text/javascript"></script>
 
 <% if signed_in? %>
-    <h1>Listing events</h1>
+    <h1>Events</h1>
     <br>
     <div id="fullCalModal" class="modal fade" style="left: 50%">
         <div class="modal-dialog">
@@ -23,7 +23,12 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
                     <h4 id="modalTitle" class="modal-title"></h4>
-                </div>
+                </div><br>
+                Faculty: <span id="facEvent"></span><br><br>
+                Code: <span id="eventCode"></span><br><br>
+                Lecturer: <span id="speaker"></span><br>
+                Start: <span id="startTime"></span><br>
+                End: <span id="endTime"></span><br><br>
                 <div id="modalBody" class="modal-body"></div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
