collapsing is always open

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -64,7 +64,7 @@
 		        Sign Up
 		      	</button>
 		</div>
-		<div id="collapseTwo" class="accordion-body collapse">
+		<div id="collapseTwo" class="accordion-body collapse in">
 		    <div class="accordion-inner">
 				<%= form_for(@user) do |f| %>
 				<div id="SignUp">
