Trying single quotes!

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Edit user") %>
+<% provide(:title, 'Edit user') %>
 <link href="/assets/ripples.css" rel="stylesheet">
 <link href="/assets/material-wfont.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
