--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,9 +63,7 @@
     <div class="center hero-unit" align="center">
         <h1>Welcome to the Schulich Round Attendance System</h1>
 
-        <h2>
-            You may sign up or sign in by clicking below.
-        </h2>
+        <h2>You may sign up or sign in by clicking below.</h2>
 
         <%= link_to "Sign Up/Sign In", signup_path, class: "btn btn-large btn-material-lightgreen" %>
     </div>
