--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,36 @@
 <% provide(:title, "All users") %>
-<h1>All users</h1>
+<link href="/assets/ripples.css" rel="stylesheet">
+<link href="/assets/material-wfont.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<ul class="users">
+<script src="/assets/ripples.js" type="text/javascript"></script>
+<script src="/assets/material.js" type="text/javascript"></script>
+<h1 class="visible-lg-block" align="center">All Users</h1>
+<h2 class="visible-md-block" align="center">All Users</h2>
+<h3 class="visible-sm-block" align="center">All Users</h3>
+<h4 class="visible-xs-block" align="center">All Users</h4>
+
+<table class="table table-striped table-hover users">
+	<thead>
+        <tr>
+            <th>Identicon</th>
+            <th>Name</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
 	<% @users.each do |user| %>
-		<li>
-			<%= identicon_for user %>
-			<%= link_to user.name, user %>
+		<tr>
+			<th> <%= identicon_for user %> </th>
+			<th> <%= link_to user.name, user %> </th>
 			<% if current_user.admin? && !current_user?(user) %>
-			|	<%= link_to "delete", user, method: :delete, confirm: "You sure?" %>
+				<th>
+					<%= link_to "Delete", user, method: :delete, confirm: "Are you sure you want to delete the user?" %>
+				</th>
 			<% end %>
-		</li>
+		</tr>
 	<% end %>
-</ul>
+	</tbody>
+</table>
