home page changes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -61,10 +61,13 @@
     <div class="modal fade" id="modal"></div>
 <% else %>
     <div class="center hero-unit" align="center">
-        <h1>Welcome to the Schulich Round Attendance System</h1>
+        <h1 class="visible-lg-block" align="center">Welcome to the Schulich Round Attendance System</h1>
+        <h2 class="visible-md-block" align="center">Welcome to the Schulich Round Attendance System</h2>
+        <h3 class="visible-sm-block visible-xs-block" align="center">Welcome to the Schulich Round Attendance System</h3>
 
-        <h2>You may sign up or sign in by clicking below.</h2>
-
+        <h2 class="visible-lg-block" align="center">You may sign up or sign in by clicking below.</h2>
+        <h3 class="visible-md-block" align="center">You may sign up or sign in by clicking below.</h3>
+        <h4 class="visible-sm-block visible-xs-block" align="center">You may sign up or sign in by clicking below.</h4>
         <%= link_to "Sign Up/Sign In", signup_path, class: "btn btn-large btn-material-lightgreen" %>
     </div>
 
