--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -64,7 +64,7 @@
     <div id="calendar"></div>
     <div class="modal fade" id="modal"></div>
 <% else %>
-    <div class="center hero-unit" align="center">
+    <div class="center hero-unit" align="center" style="margin-top: 10px;">
         <h1 class="visible-lg-block" align="center">Welcome to the Schulich Round Attendance System</h1>
         <h2 class="visible-md-block" align="center">Welcome to the Schulich Round Attendance System</h2>
         <h3 class="visible-sm-block visible-xs-block" align="center">Welcome to the Schulich Round Attendance System</h3>
@@ -74,10 +74,13 @@
         <h4 class="visible-sm-block visible-xs-block" align="center">You may sign up or sign in by clicking below.</h4>
         <%= link_to "Sign Up/Sign In", signup_path, class: "btn btn-large btn-material-lightgreen" %>
     </div>
-
-    <%= link_to image_tag("schulich.png", alt: "Schulich"), "http://www.schulich.uwo.ca/" %>
-    <div style="float: right;">
-        <%= link_to image_tag("western.png", alt: "Western"), "http://www.uwo.ca/" %>
+    <div class="row-fluid"  align="center">
+        <span class="span6" style="margin-right: 10px;">
+            <%= link_to image_tag("schulich.png", alt: "Schulich"), "http://www.schulich.uwo.ca/" %>
+        </span>
+        <span class="span6">
+            <%= link_to image_tag("western.png", alt: "Western"), "http://www.uwo.ca/" %>
+        </span>
     </div>
 <% end %>
 
