Some parts of Calendar page and Event creation page fixed

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,7 @@
-<h1>New event</h1>
+<h1 class="visible-lg-block" align="left"> New Event </h1>
+<h2 class="visible-md-block" align="left"> New Event </h2>
+<h3 class="visible-sm-block" align="left"> New Event </h3>
+<h4 class="visible-xs-block" align="left"> New Event </h4>
 
 <%= render 'form' %>
 
