--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,10 @@
 <script src="/assets/bootstrapmodal.min.js" type="text/javascript"></script>
 
 <% if signed_in? %>
-    <h1>Events</h1>
+        <h1 class="visible-lg-block" align="left">Events</h1>
+        <h2 class="visible-md-block" align="left">Events</h2>
+        <h3 class="visible-sm-block" align="left">Events</h3>
+        <h4 class="visible-xs-block" align="left">Events</h4>
     <br>
     <div id="fullCalModal" class="modal fade" style="left: 50%">
         <div class="modal-dialog">
