--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,3 +1,12 @@
+<link href="/assets/ripples.css" rel="stylesheet">
+<link href="/assets/material-wfont.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+<script src="/assets/ripples.js" type="text/javascript"></script>
+<script src="/assets/material.js" type="text/javascript"></script>
+
 <%= form_for(@event) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
@@ -13,11 +22,11 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control floating-label" %>
   </div>
   <div class="field">
     <%= f.label :lecturer %><br>
-    <%= f.text_field :lecturer %>
+    <%= f.text_field :lecturer, class: "form-control floating-label" %>
   </div>
   <div class="field">
     <%= f.label :faculty %><br>
@@ -26,7 +35,7 @@
   
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control floating-label" %>
   </div>
   <div class="field">
     <%= f.label :start_time %><br>
