--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
 						</li>
 
 						<% if signed_in? %>
+							<li><%= link_to "History", attendances_path %></li>
 							<% if current_user.admin? %>
 								<li><%= link_to "Users", users_path %></li>
 							<% end %>
