--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,8 +6,7 @@
 <link href="/assets/fullcalendar.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<!-- <script src="/assets/jquery.js" type="text/javascript"></script>
- --><script src="/assets/ripples.js" type="text/javascript"></script>
+<script src="/assets/ripples.js" type="text/javascript"></script>
 <script src="/assets/material.js" type="text/javascript"></script>
 
 <script src="/assets/moment.js" type="text/javascript"></script>
