Fixing event form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -30,7 +30,7 @@
   </div>
   <div class="field">
     <%= f.label :faculty %><br>
-    <%= f.select :faculty, [['All','all'],['Medical Sciences','medical sci'],['Dental Sciences','dental sci']] %>
+    <%= f.select :faculty, [['All','all'],['Medical Sciences','Medical Science'],['Dental Sciences','Dental Science']] %>
   </div>
   
   <div class="field">
