Changed color of Yes/No

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -53,10 +53,10 @@
             <div id="mBody" class="modal-body"> Do you want to create a new event? </div>
             <div class="row-fluid modal-footer">
                 <span class="span1" style="width:54px;" align="left">
-                    <%= link_to "Yes", new_event_path, :class => "btn btn-primary" %>
+                    <%= link_to "Yes", new_event_path, :class => "btn btn-material-lightgreen" %>
                 </span>
                 <span class="span1" style="width:54px;" align="right">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" style="top:5px;">No</button>
+                    <button type="button" class="btn btn-material-red" data-dismiss="modal" style="top:5px;">No</button>
                 </span>
             </div>
         </div>
