Changing JS dependencies

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,6 +12,7 @@
 <script src="/assets/moment.js" type="text/javascript"></script>
 <script src="/assets/fullcalendar.js" type="text/javascript"></script>
 <script src="/assets/bootstrapmodal.min.js" type="text/javascript"></script>
+<script src="/assets/static_pages.js.coffee" type="text/javascript"></script>
 
 <% if signed_in? %>
         <h1 class="visible-lg-block" align="left">Events</h1>
