--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,23 +19,30 @@
         <h3 class="visible-sm-block" align="left">Events</h3>
         <h4 class="visible-xs-block" align="left">Events</h4>
     <br>
-    <div id="fullCalModal" class="modal fade" style="left: 50%">
+    <div id="fullCalModal" class="modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">Close</span></button>
                     <h4 id="modalTitle" class="modal-title"></h4>
-                </div><br>
-                Faculty: <span id="facEvent"></span><br><br>
-                <% if current_user.admin? %>
-                  Code: <span id="eventCode"></span><br><br>
-                <% end %>
-                Lecturer: <span id="speaker"></span><br>
-                Start: <span id="startTime"></span><br>
-                End: <span id="endTime"></span><br><br>
-                <div id="modalBody" class="modal-body"></div>
+                </div>
+                <div class="modal-body">
+                    <div id="modalBody"></div>
+                    <br>
+                    <b>Faculty: </b><span id="facEvent"></span>
+                    <br>
+                    <% if current_user.admin? %>
+                    <b>Code: </b><span id="eventCode"></span>
+                    <% end %>
+                    <br>
+                    <b>Lecturer: </b><span id="speaker"></span>
+                    <br>
+                    <b>Start: </b><span id="startTime"></span>
+                    <br>
+                    <b>End: </b><span id="endTime"></span>
+                </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-material-red" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
