--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -29,8 +29,8 @@
     <%= f.text_field :lecturer, class: "form-control floating-label" %>
   </div>
   <div class="field">
-    <%= f.label :faculty %><br>
-    <%= f.select :faculty, [['All','all'],['Medical Sciences','Medical Science'],['Dental Sciences','Dental Science']] %>
+    <%= f.label :department %><br>
+    <%= f.select :faculty, [['All','all'],['Anesthesia & Perioperative Medicine','Anesthesia & Perioperative Medicine'], ['Clinical Neurological Sciences','Clinical Neurological Sciences'], ['Family Medicine','Family Medicine'], ['Medical Imaging','Medical Imaging'], ['Medicine', 'Medicine'], ['Obstetrics & Gynecology', 'Obstetrics & Gynecology'], ['Oncology', 'Oncology'], ['Ophthalmology', 'Ophthalmology'], ['Otolaryngology - Head and Neck Surgery', 'Otolaryngology - Head and Neck Surgery'], ['Paediatrics', 'Paediatrics'], ['Pathology & Laboratory Medicine', 'Pathology & Laboratory Medicine'], ['Physical Medicine & Rehabilitation', 'Physical Medicine & Rehabilitation'], ['Psychiatry', 'Psychiatry'], ['Surgery', 'Surgery']] %>
   </div>
   
   <div class="field">
