Added Department Label

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,7 +34,7 @@
                      <b>Code: </b><span id="eventCode"></span> 
                     <% end %>
                     <br>
-                    <b>Faculty: </b><span id="departmentEvent"></span>
+                    <b>Department: </b><span id="departmentEvent"></span>
                     <br>
                     <b>Lecturer: </b><span id="speaker"></span>
                     <br>
