--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
 						<% if signed_in? %>
 							<li><%= link_to "History", attendances_path %></li>
 							<% if current_user.admin? %>
+								<li><%= link_to "Export", attendances_path(format: "xls") %></li>
 								<li><%= link_to "Users", users_path %></li>
 							<% end %>
 							<li><%= link_to "Settings", edit_user_path(current_user) %></li>
