changing a few faculty->department titles

--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -18,7 +18,7 @@
             <th>Event Title</th>
             <th>Description</th>
             <th>Lecturer</th>
-            <th>Faculty</th>
+            <th>Department</th>
             <th>Date</th>
             <th>Hours</th>
         </tr>
