--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,7 @@
 							<% if current_user.admin? %>
 								<li><%= link_to "Export", attendances_path(format: "xls") %></li>
 								<li><%= link_to "Users", users_path %></li>
+								<li><%= link_to "Events", listevents_path %></li>
 							<% end %>
 							<li><%= link_to "Settings", edit_user_path(current_user) %></li>
 							<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
